# ScreenTime

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: capture.rs  clipboard.rs  config.rs  context.rs  fastvlm_local.rs  input_tracker.rs  lib.rs  logger.rs  main.rs  mcp_service.rs  models.rs  openclaw.rs  permissions.rs  screenshot.rs  service_state.rs  siliconflow.rs  standalone_service.rs  test_prompt.rs  window_tracker.rs
test/: prompt_v1.md  prompt_v2.md
