[package]
name = "screen_time"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
image = "0.24"
screenshots = "0.8.10"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
clap = { version = "4.0", features = ["derive", "env"] }
sysinfo = "0.30"
whoami = "1.5"
get_if_addrs = "0.5"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
rmcp = { version = "0.6.0", features = ["server", "transport-sse-server"] }
tower-http = { version = "0.5", features = ["cors"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "winbase"] }

[[bin]]
name = "test_windows_compatibility"
path = "test_windows_compatibility.rs"